[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "flask-tutorial-1"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.8"
firebase-admin = "^4.5.3"
nameparser = "^1.0.6"
names = "^0.3.0"
mailchimp-marketing = "^3.0.38"
[tool.poetry.dev-dependencies]
